--- a/javascript/style.css
+++ b/javascript/style.css
@@ -1,192 +1,177 @@
- /* body {
-    padding-top: 56px;
-    font-weight: 300;
-    font-size: 12px;
-    font-style: whitesmoke;
-    letter-spacing: 0.03em;
-    background-color:black;
-  } */
-  
-  /* nav.navbar {
-    border-bottom: solid 1px #d6d6d6;
-  }
-  
-  .navbar .navbar-brand {
-    font-weight: 500;
-    letter-spacing: .065em;
-  }
-  
-  .navbar-nav .nav-link {
-      letter-spacing: .035em;
-  }
-  
-  .navbar li.active a {
-    font-weight: 400;
-  }
-  
-  main.container-fluid {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  
-  .spacer {
-    height: 40vh;
-  }
-   */
-  /* .rectangle {
-    position: absolute;
-    width: 97vw;
-    height: 30vw;
-    border-radius: 10px;
-    background: linear-gradient(45deg, #69b7bf 25%, #ffe664);
-  }
-  
-  @media (min-width: 500px) {
-    .rectangle {
-      width: 40%;
-    }
-  }
-  
-  .section > .row > .col {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-  }
-  
-  #intro .col {
-    height: 50vh;
-    padding: 9vw 6vw;
-    font-size: 18px;
-  }
-  
-  @media (min-width: 1000px) {
-    #intro .col {
-      padding: 18vw 12vw;
-      font-size: 2.7vw;
-    }
-  }
-  
-  #one {
-    background-color: #212121;
-  }
-  
-  #one .elem {
-    opacity: 0;
-    letter-spacing: 0.04em;
-  }
-  
-  #one .text-block h2 {
-    font-size: 5vw;
-    letter-spacing: 0.2em;
-    font-weight: 300;
-    line-height: 1;
-  }
-  
-  #one .text-block h5 {
-    font-size: 4vw;
-    line-height: 1;
-  }
-  
-  #one .elem .blocks {
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    align-items: center;
-  } */
-  
-  /* #one .elem .blocks > div {
-    height: 20px;
-    width: 20px;
-    margin: 2px;
-    border-radius: 2px;
-    background-color: #333;
-  }
-  
-  #two {
-    height: auto;
-    overflow: hidden;
-    padding: 3vw 15vw 10vw;
-    background: linear-gradient(0deg, #69b7bf 25%, #ffe664);
-  }
-  
-  #three, #four {
-    position: relative;
-    overflow: hidden;
-  }
-  
-  #three .image, #four .image {
-    position: absolute;
-    top: 0;
-    bottom:0;
-    width: 100%;
-  }
-  
-  #three .image {
-    background-image: url("https://drive.google.com/uc?export=view&id=10tzeBrvoR5OO3EK_Wcg-gRxbVO7xv6em");
-    background-size: 100;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-  
-  #four .image {
-    background-image: url("https://drive.google.com/uc?export=view&id=1SzCTDu5_eAF569lFHtNyIlUCrdW2mOXu");
-    background-size: 200;
-    background-repeat: no-repeat;
-    background-position: center;
-  } */
+/* Body formatting*/
+body {  
+  background-color:black;
+}
 
+/* Banner CSS */
+.content-banner {
+  height: 500px;
+  text-align: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding-top: 100px;
+  position: relative;
+  user-select: none;
+}
 
-  /* Change Bullet points from dots to dashes */
-  /* ul {
-    list-style-type: none;
-    color:#999999;
-  }
-  ul li:before {
-    content: '\2014';
-    position: absolute;
-    margin-left: -20px;
-  } */
+/* General styling */
+.text-style, 
+.text-format, 
+.text-banner {
+  color: white;
+  font-style: whitesmoke;
+  letter-spacing: 0.06em;
+}
 
+/* General text formatting */
+.text-format {
+  font-weight: 300;
+  font-size: 15px;
+}
 
-  /* Change Bullet points from dots to dashes */
-  /* ul {
-    margin: 0;
-  }
-  ul.dashed {
-    list-style-type: none;
-  }
-  ul.dashed > li {
-    text-indent: -20px;
-  }
-  ul.dashed > li:before {
-    content: "-";
-    text-indent: -20px;
-  } */
-
-/* Centered text */
-.centered {
+/* Banner text formatting */
+.text-banner {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size:1.5cm;
-  color: aliceblue
+  font-size: 75px;
+  font-weight: 500;
 }
 
- .content-banner {
-    height: 500px;
-    text-align: center;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding-top: 100px;
-    position: relative;
-    user-select: none;
-  }
+/* Navbar formatting */
+.navbar, 
+.nav-link, 
+.navbar-nav, 
+.navbar-item,
+.navbar-brand {
+  letter-spacing: 0.06em;
+  font-style: whitesmoke;
+  font-weight: 800;
+}
 
-    
+.nav-link-dropdown {
+  letter-spacing: 0.06em;
+  font-style: whitesmoke;
+  font-weight: 625;
+}
+
+/* Home page content formatting */
+.home-content-format {
+  padding: 20px 20px 20px 70px;
+  border-style: inset none none inset;
+  border-top-color: white;
+  border-left-color: gold;
+  border-width: 5px 0px 0px 20px;
+}
+
+
+@media (min-width: 1000px) {
+  /* #intro .col {
+    padding: 18vw 12vw;
+    font-size: 2.7vw;
+  } */
+}
+
+@media (min-width: 500px) {
+  /* .rectangle {
+    width: 40%;
+  } */
+}
+
+
+/* 
+.rectangle {
+  position: absolute;
+  width: 97vw;
+  height: 30vw;
+  border-radius: 10px;
+  background: linear-gradient(45deg, #69b7bf 25%, #ffe664);
+}
+
+.row > .col {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+}
+
+#intro .col {
+  height: 50vh;
+  padding: 9vw 6vw;
+  font-size: 18px;
+}
+
+#one {
+  background-color: #212121;
+}
+
+#one .elem {
+  opacity: 0;
+  letter-spacing: 0.04em;
+}
+
+#one .text-block h2 {
+  font-size: 5vw;
+  letter-spacing: 0.2em;
+  font-weight: 300;
+  line-height: 1;
+}
+
+#one .text-block h5 {
+  font-size: 4vw;
+  line-height: 1;
+}
+
+#one .elem .blocks {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+}
+
+#one .elem .blocks > div {
+  height: 20px;
+  width: 20px;
+  margin: 2px;
+  border-radius: 2px;
+  background-color: #333;
+}
+
+#two {
+  height: auto;
+  overflow: hidden;
+  padding: 3vw 15vw 10vw;
+  background: linear-gradient(0deg, #69b7bf 25%, #ffe664);
+}
+
+#three, #four {
+  position: relative;
+  overflow: hidden;
+}
+
+#three .image, #four .image {
+  position: absolute;
+  top: 0;
+  bottom:0;
+  width: 100%;
+}
+
+#three .image {
+  background-image: url("https://drive.google.com/uc?export=view&id=10tzeBrvoR5OO3EK_Wcg-gRxbVO7xv6em");
+  background-size: 100;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#four .image {
+  background-image: url("https://drive.google.com/uc?export=view&id=1SzCTDu5_eAF569lFHtNyIlUCrdW2mOXu");
+  background-size: 200;
+  background-repeat: no-repeat;
+  background-position: center;
+} */
