--- a/javascript/style.css
+++ b/javascript/style.css
@@ -80,6 +80,11 @@ body {
   border-width: 5px 0px 0px 15px;
 }
 
+img {
+  width: 200px;
+  height: 300px;
+}
+
 
 @media (min-width: 1000px) {
   /* #intro .col {
